--- a/lab3/style (2).css
+++ b/lab3/style (2).css
@@ -3,20 +3,29 @@ body {
     color: white;
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+  
+  p {
     text-align: right;
-}
-h1, h2, h3, h4, h5, h6 {
+  }
+  
+  h1,
+  h2 {
+    text-align: right;
+    font-family: sans-serif;
     color: red;
-    font-weight: bold;
-    text-align: right;
-}
-.term {
+  }
+  
+  em {
     color: green;
     font-style: italic;
-}
-.wrapper {
+  }
+  
+  .wrapper {
     max-width: 960px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 10px;
     padding-right: 10px;
-}
+  }
+  
