--- a/lab6/style.css
+++ b/lab6/style.css
@@ -62,7 +62,7 @@ body {
     display:block;
     width: 58px;
     height: 58px;
-    background-image:url(pic/logo.svg);
+    background-image:url(logo.svg);
     margin-right: 25px;
 }
 .logo_text{
